Implement initiative rolls and table sorting

--- a/HeavyDuck.Dnd.InitiativeBuddy.csproj
+++ b/HeavyDuck.Dnd.InitiativeBuddy.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EncounterStatus.cs" />
     <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
     </Compile>
